--- a/estilos/style.css
+++ b/estilos/style.css
@@ -9,16 +9,30 @@ html, body{
     width: 100vh;
     background-color: black;
 }
+body{
+    background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
+    background-size: cover;
+    background-attachment: fixed;
+}
 main{
     position: relative;
     height: 100vh;
-    background-color: green;
+   
 }
 section#telefone{
     position: absolute;
     top: 50%;
     left: 50%;
-    height: 500px;
-    width: 500px;
-    background-color: blue;
+    transform: translate(-50%, -50%);
+
+    height: 627px;
+    width: 311px;
+    background: url(../imagens/frame-iphone.png) no-repeat;
+}
+iframe#tela{
+    position: relative;
+    top: 80.5px;
+    left: 21.5px;
+    height: 471px;
+    width: 269px;
 }
