criei botões laterais

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,7 +6,7 @@
 }
 html, body{
     height: 100vh;
-    width: 100vh;
+    width: 100vw;
     background-color: black;
 }
 body{
@@ -35,4 +35,21 @@ iframe#tela{
     left: 21.5px;
     height: 471px;
     width: 269px;
+}
+section#redes-sociais{
+    text-align: right;
+}
+section#redes-sociais img{
+    width: 50px;
+    border-radius: 50%;
+    margin: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.473);
+    text-align: right;
+    box-sizing: border-box;
+}
+section#redes-sociais img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.658);
+    transform: translate(-4px, -4px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.562);
+    transition: transform 0.5s, border 1s;
 }
